# AndroidPDFPreview

./: README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: CONTRIBUTING.md  bug_report.md
.github/workflows/: android.yml  codeql.yml  label.yml  release.yml  stale.yml  static.yml
app/: build.gradle.kts
app/src/androidTest/java/com/harissk/androidpdfpreview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/harissk/androidpdfpreview/: MainActivity.kt  PDFDocument.kt  PDFPreviewError.kt  PDFPreviewScreen.kt  PDFViewer.kt  PDFViewerSettings.kt  Utils.kt  XmlActivity.kt
app/src/main/res/drawable/: ic_fullscreen.xml  ic_fullscreen_exit.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_xml.xml
app/src/main/res/menu/: options.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/harissk/androidpdfpreview/: ExampleUnitTest.kt
docs/: API_Documentation.md  CHANGELOG.md  README.md  Use_Case_Implementations.md  VERSION_HISTORY.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pdfium/: build.gradle.kts  consumer-rules.pro  gradle.properties
pdfium/src/main/cpp/: CMakeLists.txt  pdfium_jni.cpp
pdfium/src/main/cpp/pdfium/include/: fpdf_annot.h  fpdf_doc.h  fpdf_edit.h  fpdf_structtree.h  fpdf_text.h  fpdfview.h
pdfium/src/main/cpp/pdfium/include/public/: fpdf_annot.h  fpdf_doc.h  fpdf_edit.h  fpdf_formfill.h  fpdf_ppo.h  fpdf_structtree.h  fpdfview.h
pdfium/src/main/cpp/utils/: Mutex.h
pdfium/src/main/java/com/harissk/pdfium/: Bookmark.kt  Link.kt  Meta.kt  PdfPasswordException.kt  PdfiumCore.kt
pdfium/src/main/java/com/harissk/pdfium/exception/: PdfiumException.kt
pdfium/src/main/java/com/harissk/pdfium/listener/: LogWriter.kt
pdfium/src/main/java/com/harissk/pdfium/search/: FPDFTextSearchContext.kt  TextSearchContext.kt
pdfium/src/main/java/com/harissk/pdfium/util/: FileUtils.kt  Size.kt  SizeF.kt
pdfpreview/: build.gradle.kts  gradle.properties
pdfpreview/src/main/java/com/harissk/pdfpreview/: AnimationManager.kt  CacheManager.kt  DecodingAsyncTask.kt  DragPinchManager.kt  Extensions.kt  PDFView.kt  PagesLoader.kt  PdfAnimator.kt  PdfFile.kt  RenderingHandler.kt
pdfpreview/src/main/java/com/harissk/pdfpreview/exception/: PageRenderingException.kt
pdfpreview/src/main/java/com/harissk/pdfpreview/link/: DefaultLinkHandler.kt  LinkHandler.kt
pdfpreview/src/main/java/com/harissk/pdfpreview/listener/: Callbacks.kt  DocumentLoadListener.kt  GestureEventListener.kt  OnDrawListener.kt  OnErrorListener.kt  OnLoadCompleteListener.kt  OnLongPressListener.kt  OnPageChangeListener.kt  OnPageErrorListener.kt  OnPageScrollListener.kt  OnRenderListener.kt  OnTapListener.kt  PageNavigationEventListener.kt  RenderingEventListener.kt  ZoomEventListener.kt
pdfpreview/src/main/java/com/harissk/pdfpreview/model/: LinkTapEvent.kt  PagePart.kt
pdfpreview/src/main/java/com/harissk/pdfpreview/request/: PdfLoadRequest.kt  PdfRequest.kt  PdfViewConfiguration.kt  PdfViewerConfiguration.kt  RenderOptions.kt
pdfpreview/src/main/res/drawable/: default_scroll_handle_bottom.xml  default_scroll_handle_right.xml
pdfpreview/src/main/res/values/: colors.xml
scripts/: download_pdfium_libs.sh
(+35 files in other folders)
